--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="navBar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Birfday</a>
+        <a class="navbar-brand" href="#">Birthday</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,10 +19,10 @@
               <a id="navbar-button-auth" class="nav-link">Authentication</a>
             </li>
             <li class="nav-item">
-              <a id="navbar-button-birfday" class="nav-link hide">My Birfday</a>
+              <a id="navbar-button-birfday" class="nav-link hide">My Birthday</a>
             </li>
             <li class="nav-item">
-              <a id="navbar-button-logout" class="nav-link hide">Logout</a>
+              <a id="navbar-button-logout" class="nav-link">Logout</a>
             </li>
           </ul>
         </div>
