--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,17 @@
               <a id="navbar-button-auth" class="nav-link">Authentication</a>
             </li>
             <li class="nav-item">
-              <a id="navbar-button-birfday" class="nav-link hide">My Birthday</a>
+              <a id="navbar-button-birthday" class="nav-link hide">My Birthday</a>
             </li>
             <li class="nav-item">
-              <a id="navbar-button-logout" class="nav-link">Logout</a>
+              <a id="navbar-button-logout" class="nav-link hide">Logout</a>
             </li>
           </ul>
         </div>
       </nav>
   <div id="auth"></div>
   <div id="birthday" class="hide"></div>
+      <div id="event"></div>
+      <div id="friends"></div>
 </body>
 </html>
